--- a/Hujiahong2/app/src/main/AndroidManifest.xml
+++ b/Hujiahong2/app/src/main/AndroidManifest.xml
@@ -29,10 +29,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.hujiahong.hujiahong.LeadershipCareActivity"
+            android:name="com.example.hujiahong.hujiahong.PersonVideoActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
             tools:replace="android:screenOrientation"></activity>
+        <activity
+            android:name="com.example.hujiahong.hujiahong.LeadershipCareActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 
