修改视频央视,可以循环播放 楼层图片点击可以回来 加上了活动展示界面 楼层图片可以滑动 添加返回图标 部分代码优化

--- a/Hujiahong2/app/src/main/AndroidManifest.xml
+++ b/Hujiahong2/app/src/main/AndroidManifest.xml
@@ -49,6 +49,14 @@
             android:name="com.example.hujiahong.hujiahong.ShowResponsibilitiesActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.example.hujiahong.hujiahong.ActivityShowActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.example.hujiahong.hujiahong.ActivityDetailsActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 
