--- a/Hujiahong2/app/src/main/AndroidManifest.xml
+++ b/Hujiahong2/app/src/main/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name="com.example.hujiahong.hujiahong.ActivityDetailsActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.example.hujiahong.hujiahong.ActivityDetailsActivity2"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 
