--- a/Hujiahong2/app/build.gradle
+++ b/Hujiahong2/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -28,4 +28,5 @@ dependencies {
     compile project(':nf.framework')
     compile project(':video_playersdk_v2.0')
     testCompile 'junit:junit:4.12'
+    compile files('src/main/libs/mysql-connector-java-5.1.35-bin.jar')
 }
